--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,17 @@
 name: flutter_awesome_select
 description: Easily convert your usual single/multiple select or dropdown into page, dialog, or bottom sheet with various choice input such as radio, checkbox, switch, chips, or custom widget.
 homepage: https://github.com/artflutter/flutter_awesome_select
-version: 6.1.2-beta
+version: 6.2.0-beta
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.15.0
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-flutter:
